<resources>


<!--Libelle global-->

    <string name="app_name">AppSLAM5</string>
    <string name="supprimer">Supprimer la BDD</string>

<!--Libelle des parties dans le menu-->


    <string name="menu_home">Accueil</string>
    <string name="menu_donnees">Données</string>
    <string name="menu_saisie">Ajouter</string>
    <string name="menu_moyenne">Moyenne</string>


<!--Champs de texte pour le formulaire-->

    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="lieu">Lieu :</string>
    <string name="jour">Jour :</string>
    <string name="mois">Mois :</string>
    <string name="heure">Heure :</string>
    <string name="temp">Température :</string>
    <string name="btn_save">Enregistrer</string>
    <string name="btn_quit">Annuler</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_search">Rechercher</string>
    <string name="btn_drop">Supprimer</string>




    <!--Heures des saisies de température-->

    <string name="heuresaisiequatre">04h</string>
    <string name="heuresaisiehuit">08h</string>
    <string name="heuresaisiedouze">12h</string>
    <string name="heuresaisieseize">16h</string>
    <string name="heuresaisievingt">20h</string>
    <string name="heuresaisieminuit">00h</string>

    <string name="libellechoixdate">Veuillez choisir une date</string>

    <string name="moyenne">Moyenne :</string>


    <!--Menu déroualnt pour la saisie des mois dans la recherche de moyenne-->

    <string-array name="nom_mois">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <!--Menu déroualnt pour la saisie des jour dans la recherche de moyenne-->

    <string-array name="nom_jour">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!--Menu déroualnt pour la saisie des unités pour la moyenne-->

    <string-array name="nom_temp">
        <item>Celsius</item>
        <item>Farenheit</item>
    </string-array>

    <!--Menu déroualnt pour la saisie des heures-->

    <string-array name="heure">
        <item>00h</item>
        <item>04h</item>
        <item>08h</item>
        <item>12h</item>
        <item>16h</item>
        <item>20h</item>
    </string-array>


</resources>
