<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Libelle avec icon des différentes cases du menu -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_donnees"
            android:icon="@drawable/thermometer"
            android:title="@string/menu_donnees" />

        <item
        android:id="@+id/nav_saisie"
        android:icon="@drawable/plus"
        android:title="@string/menu_saisie" />

        <item
            android:id="@+id/nav_moyenne"
            android:icon="@drawable/moyenne"
            android:title="@string/menu_moyenne" />

    </group>

</menu>
