<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--Les différentes interfaces-->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_moyenne"
        android:name="com.example.myapplication.ui.moyenne.MoyenneFragment"
        android:label="@string/menu_moyenne"
        tools:layout="@layout/fragment_moyenne" />
    <fragment
        android:id="@+id/nav_saisie"
        android:name="com.example.myapplication.ui.saisie.SaisieFragment"
        android:label="@string/menu_saisie"
        tools:layout="@layout/fragment_saisie"/>
    <fragment
        android:id="@+id/nav_donnees"
        android:name="com.example.myapplication.ui.donnees.DonneesFragment"
        android:label="@string/menu_donnees"
        tools:layout="@layout/fragment_donnees"/>

</navigation>