<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <!-- Libelle du nom -->

    <TextView
        android:id="@+id/NomSaisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Libelle du jour-->

    <TextView
        android:id="@+id/jourSaisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/jour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Libelle du mois -->

    <TextView
        android:id="@+id/MoisSaisie"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginTop="172dp"
        android:text="@string/mois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Libelle de l'heure -->

    <TextView
        android:id="@+id/heureSaisie"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginTop="172dp"
        android:text="@string/heure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Menu déroulant pour les heures -->

    <Spinner
        android:id="@+id/menuHeure"
        android:layout_width="112dp"
        android:layout_height="59dp"
        android:layout_marginTop="204dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Menu déroulant pour les jours-->

    <Spinner
        android:id="@+id/menuJourSaisie"
        android:layout_width="114dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Menu déroulant pour les mois-->

    <Spinner
        android:id="@+id/menuMoisSaisie"
        android:layout_width="133dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Libelle de la température -->

    <!-- Champs de texte pour le nom -->

    <TextView
        android:id="@+id/TempSaisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputNom"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>


    <!-- Champs de texte pour le température -->

    <!-- Bouton enregistrer -->

    <EditText
        android:id="@+id/InputTemp"
        android:layout_width="92dp"
        android:layout_height="43dp"
        android:layout_marginTop="332dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="171dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="416dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Champs de texte pour la date -->


</androidx.constraintlayout.widget.ConstraintLayout>