<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.myapplication.MainActivity">

    <!-- Libelle données -->

    <TextView
        android:id="@+id/moyenne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/menu_donnees"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Menu déroualnt pour la saisie des unités pour la recherche de la moyenne-->

    <!--Menu déroualnt pour la saisie du mois pour la recherche de la moyenne-->

    <Spinner
        android:id="@+id/menuTemp"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Bouton recherche de la moyenne-->

    <Spinner
        android:id="@+id/menuMois"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginTop="96dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/menuJour"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginTop="96dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginTop="172dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewMoyenne"
        android:layout_width="326dp"
        android:layout_height="417dp"
        android:layout_marginTop="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </ListView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/btn_drop"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDROP"
        android:text="@string/btn_drop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>